--- a/app/Dockerfile.prod
+++ b/app/Dockerfile.prod
@@ -6,8 +6,7 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-RUN apk update \
-    && apk add postgresql-dev gcc python3-dev musl-dev
+RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev
 
 RUN pip install --upgrade pip
 RUN pip install flake8
