--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,27 @@ version: '3'
 services:
   web:
     build: ./app
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      sh -c "python manage.py collectstatic --noinput &&
+             python manage.py makemigrations users &&
+             python manage.py migrate &&
+             python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./app/:/usr/src/app/
     ports:
       - 8000:8000
     env_file:
       - ./.env.dev
+    depends_on:
+      - db
   db:
     image: postgres:12.0-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - postgres_data_dev:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=akvelon_payments_user
       - POSTGRES_PASSWORD=akvelon_payments_password
-      - POSTGRES_DB=akvelon_payments_db
+      - POSTGRES_DB=akvelon_payments_db_dev
 
 volumes:
-  postgres_data:
+  postgres_data_dev:
