--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,6 +8,7 @@ services:
     command: >
       sh -c "python manage.py collectstatic --noinput &&
              python manage.py makemigrations users &&
+             python manage.py makemigrations transactions &&
              python manage.py migrate &&
              gunicorn akvelon_payments.wsgi:application --bind 0.0.0.0:8000"
     volumes:
