--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     command: >
       sh -c "python manage.py collectstatic --noinput &&
              python manage.py makemigrations users &&
+             python manage.py makemigrations transactions &&
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     volumes:
